<resources>
    <!--app-->
    <string name="app_name">SKITS</string>


    <!--splash-->
    <string name="splash">Peter en Petra de Jong trofee</string>


    <!--titles-->
    <string name="title_winners">Previous winners</string>
    <string name="title_standing">Standing</string>
    <string name="title_info">Info</string>
    <string name="title_wedciemember">Wedcie members</string>
    <string name="title_login">Login</string>
    <string name="title_add">Add</string>
    <string name="title_skater">Skater</string>
    <string name="title_winners_fragment">All previous winners of the trophee</string>


    <!--info page-->
    <string name="info_trophy">Het competitieve element op een SKITS training: de Peter en Petra de Jong trofee.  Het gaat om 25 (mannen) of 18 (vrouwen) rondjes solo (dus niet stayeren) langs de binnenkant van de baan op tijd.  Start en finish bij 500 meter start. Er wordt stilstaand gestart. WedCie is aanwezig (indien gemeld of aangevraagd) om ronde te turfen en te klokken.</string>
    <string name="info_trophy_title">Wat is de Peter/Petra de Jong trofee</string>
    <string name="ThanksSpeedSkatingResults">This app makes use of the http://www.speedskatingresults.com public API. "</string>


    <!--inputs-->
    <string name="input_name">Name</string>
    <string name="input_lastname">Lastname</string>
    <string name="input_firstname">Firstname</string>
    <string name="input_day">Day</string>
    <string name="input_month">Day</string>
    <string name="input_year">Day</string>
    <string name="input_username">Username</string>
    <string name="input_password">password</string>
    <string name="input_skits_id">SKITS ID</string>
    <string name="input_time">Time</string>
    <string name="input_weather">Weather</string>


    <!--sex-->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="male_short">m</string>
    <string name="female_short">f</string>

    <!--login-->
    <string name="login">Login</string>
    <string name="logout">logout</string>
    <string name="login_info">This login is only for members of the wedcie.</string>


    <!--empty string-->
    <string name="empty_string" />


    <!--remaining-->
    <string name="incorrect_input">Please enter a correct input for: %s</string>
    <string name="no_attempt">No attempt</string>
    <string name="all_time">All time</string>
    <string name="standing_season">Season %d-%d</string>
    <string name="skits_site_link">Click here for contact information via the SKITS site.</string>
    <string name="ranking_per_year">Ranking per year</string>
    <string name="result_weather">Weather: %s</string>
    <string name="skater_ranking_y_axis" />
    <string name="ranking">ranking</string>
    <string name="skits_site_member">https://www.skits.nl/mijn-vereniging/ledenlijst/%d</string>
    <string name="results">Results</string>
    <string name="prs">Personal records</string>
    <string name="skater_info">Skater info</string>
    <string name="attempt_info">Attempt info</string>
    <string name="add">Add</string>
    <string name="retry">Retry</string>
    <string name="no_skaters_found">No skaters found. Please try again</string>
    <string name="add_succesfull">Attempt has been added</string>
    <string name="season">%s/%s</string>
    <string name="skits_logo">SKITS logo</string>
    <string name="pick_date">Pick Date</string>
    <string name="image_button_up">image button up</string>
    <string name="image_button_down">image button down</string>
    <string name="fab">floating action button</string>
    <string name="no_attempts_this_year">There are no %s attempts found in this season</string>
    <string name="new_skater">New Skater</string>


    <string name="error_add_attempt">Attempt is saved, but will be added to the database at later moment when internet connection is good.</string>
    <string name="error_get_attempts">Couldn\'t retrieve updated attempts list.</string>
    <string name="error_ssr_id">Couldn\'t connect to speedskating result, try again later. Or check your connection</string>
</resources>