<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_standing">

    <fragment
        android:id="@+id/navigation_winners"
        android:name="com.example.capstone.ui.WinnersFragment"
        android:label="@string/title_winners"
        tools:layout="@layout/fragment_winners" />

    <fragment
        android:id="@+id/navigation_standing"
        android:name="com.example.capstone.ui.StandingFragment"
        android:label="@string/title_standing"
        tools:layout="@layout/fragment_standing" >
        <action
            android:id="@+id/action_navigation_standing_to_skaterFragment"
            app:destination="@id/skaterFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.capstone.ui.InformationFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_information" />
    <fragment
        android:id="@+id/skaterFragment"
        android:name="com.example.capstone.ui.SkaterFragment"
        android:label="fragment_skater"
        tools:layout="@layout/fragment_skater" />
</navigation>