<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FFFFFF"
    android:visibility="visible"
    tools:context=".ui.StandingFragment">

    <ImageButton
        android:id="@+id/ibUp"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/ic_baseline_arrow_right_48"
        app:layout_constraintBottom_toBottomOf="@+id/tvSeason"
        app:layout_constraintStart_toEndOf="@+id/tvSeason"
        app:layout_constraintTop_toTopOf="@+id/tvSeason"
        app:tint="@color/colorAccent" />

    <ImageButton
        android:id="@+id/ibDown"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/ic_baseline_arrow_left_48"
        app:layout_constraintBottom_toBottomOf="@+id/tvSeason"
        app:layout_constraintEnd_toStartOf="@+id/tvSeason"
        app:layout_constraintTop_toTopOf="@+id/tvSeason"
        app:tint="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/pbStanding"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <RadioGroup
        android:id="@+id/rgSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeason">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvSeason"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStanding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSex" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:visibility="invisible"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvNoSkaters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_skaters_found"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rvStanding"
        app:layout_constraintEnd_toEndOf="@+id/rvStanding"
        app:layout_constraintStart_toStartOf="@+id/rvStanding"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/retry"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoSkaters"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>